=========================================================================
CHANGE LOG
=========================================================================

2012-04-06 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Adding checks for Quadro cards to enable cylinder shader workaround.
	
2012-04-06 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Improved PyMOL Plugin System; Thomas Holder's PyMOL OSFP project
	
2012-04-06 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Standard splash

2012-04-05 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Default all Intel cards to not use shaders

	* Fixed ID:3513708, cmd.get_unused_name fix; thanks to Thomas Holder

	* Added new splash image for open-source build

2012-03-20 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixed ID: 3512313 TER records before residues like MSE, patch submitted by Thomas Holder

2012-03-05 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed crash when reading in long lines from stdin

2012-03-03 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* updating version 1.5.0.2 -> 1.5.0.3

	* fixed error showing Cell on map with attached file

	* fixed reading in symmetry

	* fixed problem with symmetry copying/setting where map doesn't get updated

	* get_symmetry should return None if argument is not an ObjectMolecule or ObjectMap

	* stack trace when hiding everything for mesh

	* fixed Volume extents only get shown when volume is rendered

	* fixed copying Symmetry info into Objects (ObjectMap and ObjectMolecule)

	* fixed reading in legacy sessions with version # less than 1

2012-02-17 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fink/Macport builds fixed; thanks to Jack Howarth for the patch.

2012-02-17 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Open Source PyMOL v1.5.0.2
	* stack trace when saving movie as MPEG (ID: 3488608)
	* error loading from pse that don't have Crystal/Symmetry info 
	  (ID: 3488609)
